--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mdx-js/loader": "^2.3.0",
+    "@mdx-js/react": "^2.3.0",
+    "@next/mdx": "^13.4.9",
+    "@types/mdx": "^2.0.5",
     "@vercel/analytics": "^0.1.11",
     "@vercel/og": "^0.4.0",
     "axios": "0.21.1",
@@ -19,8 +23,10 @@
     "daisyui": "^2.51.3",
     "encoding": "^0.1.13",
     "eslint-config-next": "^13.2.4",
+    "gray-matter": "^4.0.3",
     "he": "1.2.0",
     "next": "^13.2.4",
+    "next-mdx-remote": "^4.4.1",
     "prettier": "2.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
