--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
     ],
     "baseUrl": ".",
     "paths": {
-      "~/*": ["./*"]
+      "~/*": ["./*"],
+      "react": ["./node_modules/@types/react"]
     },
     "strictNullChecks": false
   },
