--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-hot-toast": "^2.4.0",
     "react-virtualized-auto-sizer": "^1.0.7",
     "request-ip": "2.1.3",
+    "serverless-postgres": "^2.1.0",
     "sharp": "^0.31.3",
     "swagger-ui-react": "^4.15.2"
   },
