--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "db:push": "ts-node ./db/migrate.ts"
   },
   "dependencies": {
+    "@auth/core": "^0.11.1",
     "@vercel/analytics": "^0.1.11",
     "@vercel/og": "^0.4.0",
     "axios": "0.21.1",
@@ -26,6 +27,7 @@
     "gray-matter": "^4.0.3",
     "he": "1.2.0",
     "next": "^13.4.12",
+    "next-auth": "^4.23.0",
     "next-mdx-remote": "^4.4.1",
     "pg": "^8.11.2",
     "prettier": "2.2.1",
