--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "eslint-config-next": "^13.2.4",
     "gray-matter": "^4.0.3",
     "he": "1.2.0",
+    "jsonwebtoken": "^9.0.1",
     "next": "^13.4.12",
     "next-auth": "^4.23.0",
     "next-mdx-remote": "^4.4.1",
@@ -46,6 +47,7 @@
     "@types/d3-time-format": "^4.0.0",
     "@types/gtag.js": "0.0.4",
     "@types/he": "1.1.1",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "14.14.22",
     "@types/react": "17.0.0",
     "@types/request-ip": "0.0.36",
