--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "eslint-config-next": "^13.2.4",
     "gray-matter": "^4.0.3",
     "he": "1.2.0",
-    "jsonwebtoken": "^9.0.1",
     "next": "^13.4.12",
     "next-auth": "^4.23.0",
     "next-mdx-remote": "^4.4.1",
@@ -40,6 +39,7 @@
     "request-ip": "2.1.3",
     "serverless-postgres": "^2.1.0",
     "sharp": "^0.31.3",
+    "short-uuid": "^4.2.2",
     "swagger-ui-react": "^4.15.2"
   },
   "devDependencies": {
@@ -47,7 +47,6 @@
     "@types/d3-time-format": "^4.0.0",
     "@types/gtag.js": "0.0.4",
     "@types/he": "1.1.1",
-    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "14.14.22",
     "@types/react": "17.0.0",
     "@types/request-ip": "0.0.36",
