--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@auth/core": "^0.11.1",
+    "@sendgrid/mail": "^7.7.0",
     "@vercel/analytics": "^0.1.11",
     "@vercel/og": "^0.4.0",
     "axios": "0.21.1",
