--- a/package.json
+++ b/package.json
@@ -13,10 +13,10 @@
   "dependencies": {
     "@auth/core": "^0.11.1",
     "@sendgrid/mail": "^7.7.0",
+    "@tremor/react": "^3.6.1",
     "@vercel/analytics": "^0.1.11",
     "@vercel/og": "^0.4.0",
     "axios": "0.21.1",
-    "chart.js": "^4.2.1",
     "clsx": "^1.2.1",
     "d3-format": "^3.1.0",
     "d3-time-format": "^4.1.0",
